@@ -1,3 +1,8 @@
+2007-11-07: Jason Long <jlong@messiah.edu>
+ * lib/Mail/DKIM/Signature.pm: allow Timestamp to be specified to new()
+ * lib/Mail/DKIM/Signer.pm: allow Timestamp to be specified to new(),
+   requested by Mark Martinec
+
 2007-11-06: Jason Long <jlong@messiah.edu>
  * lib/Mail/DKIM/Canonicalization/simple.pm,
    lib/Mail/DKIM/Canonicalization/Base.pm,
